ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2014/03/10 - jgonzale - Simulator
	FEATURES:	First addition of Karthikeyan's EEE model. Not tested yet, but
				no regressions observed

	BUGFIX:		Node speed factor is now applied to balanced modules duration

2014/02/26 - jgonzale - Simulator
	BUGFIX:		Bug when detecting the number of opened files. Changed 'fstat'
				to 'fcntl'

	BUGFIX:		Bug when re-positioning the input trace, on 32-bit linux

2014/02/26 - jgonzale - prv2dim

	BUGFIX:		Changes in the way the communications are sorted

2014/02/17 - jgonzale - Simulator | prv2dim - 5.2.4	
	BUGFIX:		Bug when generating Paraver trace, communicators numbering
				do not need +1 offset

	FEATURES:	When translating  Paraver traces generated by Dimemas, the
				Wait synchronizations may appear inside Send primitives

2014/02/10 - jgonzale - Simulator - 5.2.3
	BUGFIX:		Error when reading external dimemas collectives file

2014/02/05 - jgonzale - Simulator | GUI - 5.2.2
	BUGFIX:		Modules balancing and ratio where wrongly captured in the
				new configuration parsing

	BUGFIX:		Modules definition in the GUI where sorted randomly

2014/02/04 - jgonzale - GUI - 5.2.1
	BUGFIX:		Bug when saving a 'n tasks per node' mapping without 
				pressing ENTER in the text field

	BUGFIX:		Bug when distributing GUI resource files in the 'Makefile.am'

2014/01/28 - jgonzale - Simulator - 5.2.0 (corrected)
	BUGFIX:		Bug when parsing a 'predefined map info' that includes a
				trace

2014/01/27 - jgonzale - Simulator | GUI - 5.2.0 (corrected)
	BUGFIX:		Added 'trims' when reading configuration files in the GUI
				to solve bug #30

	BUGFIX:		Correct defition of the 'IO_fseek' in the dimemas header

	BUGFIX:		Correct creation of output PCF name when output Paraver