@@ -61,8 +61,8 @@ void warning(const char *fmt, ...)
 {
   va_list args;
   va_start (args, fmt);
-  fprintf(stderr, "WARNING: ");
-  vfprintf (stderr, fmt, args);
+  fprintf(stdout, "WARNING: ");
+  vfprintf (stdout, fmt, args);
   va_end (args);
 }
 
